force-app/main/default/objects/Contact/fields/Academic_Grade__c.field-meta.xml
<CustomField>
    <fullName>Academic_Grade__c</fullName>
    <description>Student&apos;s Academic Grade</description>
    <label>Academic Grade</label>
    <type>TextArea</type>
</CustomField>