force-app/main/default/objects/Contact/fields/Bachelor_s_Degree__c.field-meta.xml
<CustomField>
    <fullName>Bachelor_s_Degree__c</fullName>
    <description>Student&apos;s Bachelor&apos;s Degree program</description>
    <label>Bachelor&apos;s Degree</label>
    <type>TextArea</type>
</CustomField>