force-app/main/default/objects/Contact/fields/Last_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Update__c</fullName>
    <description>Date and time the member&apos;s status was last updated.</description>
    <label>Last Status Update</label>
    <type>DateTime</type>
</CustomField>