force-app/main/default/objects/Contact/fields/Participation_Status__c.field-meta.xml
<CustomField>
    <fullName>Participation_Status__c</fullName>
    <description>Current status of the member&apos;s participation in the event.</description>
    <label>Participation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RSVP</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>